--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>D2Admin</title>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+      hello
+    </div>
   </body>
 </html>
