--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        background: #8e9eab;
+        /* background: #8e9eab;
         background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);
-        background: linear-gradient(to right, #eef2f3, #8e9eab);
+        background: linear-gradient(to right, #eef2f3, #8e9eab); */
+        /* background: #4b6cb7;
+        background: -webkit-linear-gradient(to right, #182848, #4b6cb7);
+        background: linear-gradient(to right, #182848, #4b6cb7); */
+        background: #757F9A;
+        background: -webkit-linear-gradient(to top, #D7DDE8, #757F9A);
+        background: linear-gradient(to top, #D7DDE8, #757F9A);
       }
       .title {
         color: #FFF;
