--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         margin: 0px;
         padding: 0px;
       }
-      .loading-group {
+      .d2-app-loading-group {
         height: 100%;
         width: 100%;
         display: flex;
@@ -27,7 +27,7 @@
         background: -webkit-linear-gradient(to top, #D7DDE8, #757F9A);
         background: linear-gradient(to top, #D7DDE8, #757F9A);
       }
-      .title {
+      .d2-app-loading-title {
         color: #FFF;
         font-weight: bold;
         font-size: 14px;
@@ -35,7 +35,7 @@
         margin-bottom: 10px;
         letter-spacing: 0.2em;
       }
-      .sub-title {
+      .d2-app-loading-sub-title {
         color: #FFF;
         font-size: 10px;
       }
@@ -107,7 +107,7 @@
   </head>
   <body>
     <div id="app">
-      <div class="loading-group">
+      <div class="d2-app-loading-group">
         <div class="sk-cube-grid">
           <div class="sk-cube sk-cube1"></div>
           <div class="sk-cube sk-cube2"></div>
@@ -119,8 +119,8 @@
           <div class="sk-cube sk-cube8"></div>
           <div class="sk-cube sk-cube9"></div>
         </div>
-        <div class="title">加载中</div>
-        <div class="sub-title">初次加载会比较慢，请耐心等待</div>
+        <div class="d2-app-loading-title">加载中</div>
+        <div class="d2-app-loading-sub-title">初次加载会比较慢，请耐心等待</div>
       </div>
     </div>
   </body>
