--- a/index.html
+++ b/index.html
@@ -39,52 +39,52 @@
         color: #FFF;
         font-size: 10px;
       }
-      .sk-cube-grid {
+      .d2-app-loading-grid {
         width: 30px;
         height: 30px;
       }
 
-      .sk-cube-grid .sk-cube {
+      .d2-app-loading-grid .d2-app-loading {
         width: 10px;
         height: 10px;
         background-color: #FFF;
         float: left;
-        -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
-                animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
+        -webkit-animation: d2-app-loading-grid-scale-delay 1.3s infinite ease-in-out;
+                animation: d2-app-loading-grid-scale-delay 1.3s infinite ease-in-out; 
       }
-      .sk-cube-grid .sk-cube1 {
+      .d2-app-loading-grid .d2-app-loading1 {
         border-top-left-radius: 4px;
         -webkit-animation-delay: 0.2s;
                 animation-delay: 0.2s; }
-      .sk-cube-grid .sk-cube2 {
+      .d2-app-loading-grid .d2-app-loading2 {
         -webkit-animation-delay: 0.3s;
                 animation-delay: 0.3s; }
-      .sk-cube-grid .sk-cube3 {
+      .d2-app-loading-grid .d2-app-loading3 {
         border-top-right-radius: 4px;
         -webkit-animation-delay: 0.4s;
                 animation-delay: 0.4s; }
-      .sk-cube-grid .sk-cube4 {
+      .d2-app-loading-grid .d2-app-loading4 {
         -webkit-animation-delay: 0.1s;
                 animation-delay: 0.1s; }
-      .sk-cube-grid .sk-cube5 {
+      .d2-app-loading-grid .d2-app-loading5 {
         -webkit-animation-delay: 0.2s;
                 animation-delay: 0.2s; }
-      .sk-cube-grid .sk-cube6 {
+      .d2-app-loading-grid .d2-app-loading6 {
         -webkit-animation-delay: 0.3s;
                 animation-delay: 0.3s; }
-      .sk-cube-grid .sk-cube7 {
+      .d2-app-loading-grid .d2-app-loading7 {
         border-bottom-left-radius: 4px;
         -webkit-animation-delay: 0s;
                 animation-delay: 0s; }
-      .sk-cube-grid .sk-cube8 {
+      .d2-app-loading-grid .d2-app-loading8 {
         -webkit-animation-delay: 0.1s;
                 animation-delay: 0.1s; }
-      .sk-cube-grid .sk-cube9 {
+      .d2-app-loading-grid .d2-app-loading9 {
         border-bottom-right-radius: 4px;
         -webkit-animation-delay: 0.2s;
                 animation-delay: 0.2s; }
 
-      @-webkit-keyframes sk-cubeGridScaleDelay {
+      @-webkit-keyframes d2-app-loading-grid-scale-delay {
         0%, 70%, 100% {
           -webkit-transform: scale3D(1, 1, 1);
                   transform: scale3D(1, 1, 1);
@@ -94,7 +94,7 @@
         }
       }
 
-      @keyframes sk-cubeGridScaleDelay {
+      @keyframes d2-app-loading-grid-scale-delay {
         0%, 70%, 100% {
           -webkit-transform: scale3D(1, 1, 1);
                   transform: scale3D(1, 1, 1);
@@ -108,16 +108,16 @@
   <body>
     <div id="app">
       <div class="d2-app-loading-group">
-        <div class="sk-cube-grid">
-          <div class="sk-cube sk-cube1"></div>
-          <div class="sk-cube sk-cube2"></div>
-          <div class="sk-cube sk-cube3"></div>
-          <div class="sk-cube sk-cube4"></div>
-          <div class="sk-cube sk-cube5"></div>
-          <div class="sk-cube sk-cube6"></div>
-          <div class="sk-cube sk-cube7"></div>
-          <div class="sk-cube sk-cube8"></div>
-          <div class="sk-cube sk-cube9"></div>
+        <div class="d2-app-loading-grid">
+          <div class="d2-app-loading d2-app-loading1"></div>
+          <div class="d2-app-loading d2-app-loading2"></div>
+          <div class="d2-app-loading d2-app-loading3"></div>
+          <div class="d2-app-loading d2-app-loading4"></div>
+          <div class="d2-app-loading d2-app-loading5"></div>
+          <div class="d2-app-loading d2-app-loading6"></div>
+          <div class="d2-app-loading d2-app-loading7"></div>
+          <div class="d2-app-loading d2-app-loading8"></div>
+          <div class="d2-app-loading d2-app-loading9"></div>
         </div>
         <div class="d2-app-loading-title">加载中</div>
         <div class="d2-app-loading-sub-title">初次加载会比较慢，请耐心等待</div>
