--- a/index.html
+++ b/index.html
@@ -39,12 +39,18 @@
       .d2-app-loading-sub-title {
         color: #FFF;
         font-size: 10px;
+        margin-bottom: 10px;
+      }
+      .d2-app-loading-sub-info {
+        color: #FFF;
+        font-size: 10px;
+        opacity: .8;
+        margin-bottom: 4px;
       }
       .d2-app-loading-grid {
         width: 30px;
         height: 30px;
       }
-
       .d2-app-loading-grid .d2-app-loading {
         width: 10px;
         height: 10px;
@@ -121,7 +127,8 @@
           <div class="d2-app-loading d2-app-loading9"></div>
         </div>
         <div class="d2-app-loading-title">加载中</div>
-        <div class="d2-app-loading-sub-title">初次加载会比较慢，请耐心等待</div>
+        <div class="d2-app-loading-sub-title">本示例项目加载了大量的组件，初次加载会比较慢，请耐心等待</div>
+        <div class="d2-app-loading-sub-info">如果很久很久都没有加载成功，请清空缓存重新加载页面</div>
       </div>
     </div>
   </body>
