--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@
         } 
       }
     </style>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?20b202d9b1189c9352fc3e8c92c215fc";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
   </head>
   <body>
     <div id="app">
