--- a/public/index.html
+++ b/public/index.html
@@ -166,7 +166,7 @@
           <div class="d2-app-loading d2-app-loading9"></div>
         </div>
         <div class="d2-app-loading-title">加载中</div>
-        <div class="d2-app-loading-sub-title">欢迎使用 D2Admin 开发，初次加载会比较慢，请耐心等待</div>
+        <div class="d2-app-loading-sub-title">欢迎使用 D2Admin 进行你的开发，初次加载会比较慢，请耐心等待</div>
         <div class="d2-app-loading-sub-info">如果很久很久都没有加载成功，请清空缓存重新加载页面</div>
         <div style="margin-top: 10px;">
           <a class="d2-app-loading-btn" href="https://github.com/d2-projects/d2-admin" target="blank">Github仓库</a>
