移动设备判断

--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,8 @@
         s.parentNode.insertBefore(hm, s);
       })();
     </script>
+    <script src="./script/ua-parser.min.js"></script>
+    <script src="./script/ua.js"></script>
   </head>
   <body>
     <noscript>
